# MasterSlaveAgent

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  seed_db.py
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  seed_db.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: __init__.py  registry.py  slave_agent.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  message.py  notification.py  tenant.py  tenant_knowledge.py  user.py
backend/app/routers/: auth.py  messages.py  notifications.py  websocket.py
backend/app/schemas/: __init__.py  action.py  auth.py  message.py  notification.py  user.py
backend/app/services/: redis_service.py  worker.py
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  index.html  nginx-main.conf  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Chat.jsx  Login.jsx  Notifications.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/services/: api.js
openspec/: project.md
openspec/changes/add-multi-tenant-poc/: design.md  proposal.md  tasks.md
openspec/changes/add-multi-tenant-poc/specs/message-processing/: spec.md
openspec/changes/add-multi-tenant-poc/specs/multi-tenant-routing/: spec.md
openspec/changes/add-multi-tenant-poc/specs/slave-agent/: spec.md
openspec/changes/add-multi-tenant-poc/specs/web-ui/: spec.md
scripts/: seed_data.py
